wip on swagger documentation
